<resources>
    <string name="app_name">INFORMATION</string>
    <string name="string_home">Home</string>
    <string name="string_addentry">Add Entry</string>
    <string name="string_listentry">List Entry</string>
    <string name="string_mcp">MCP</string>
    <string name="string_sales">Sales</string>
    <string name="string_settings">Settings</string>
    <string name="string_logout">Logout</string>
    <string name="string_control">Control</string>
    <string name="string_brandname">No. 1 Supplier</string>
    <string name="string_location">Dumaguete</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="position_name">Position</string>
    <string name="display_name">Complete Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dmcs_check_and_act_form">DMCS CHECK AND ACT FORM</string>

    <string-array name="HDlevel">
        <item></item>
        <item>HD - High Developed</item>
        <item>D - Developed</item>
        <item>ND - Not Developed</item>
    </string-array>
    <string-array name="HDlevel1">
        <item></item>
        <item>HD - High Developed</item>
        <item>D - Developed</item>
        <item>ND - Not Developed</item>
        <item>N/A</item>
    </string-array>
    <string-array name="CLlevel1">
        <item></item>
        <item>CL1 - Zero Knowledge</item>
        <item>CL2 - Trained</item>
        <item>CL3 - Can do with help</item>
        <item>CL4 - Can do alone</item>
        <item>CL5 - Can teach others</item>
        <item>N/A</item>
    </string-array>
    <string-array name="CLlevel">
        <item></item>
        <item>CL1 - Zero Knowledge</item>
        <item>CL2 - Trained</item>
        <item>CL3 - Can do with help</item>
        <item>CL4 - Can do alone</item>
        <item>CL5 - Can teach others</item>
    </string-array>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>

    <string-array name="rank1">
        <item>SELECT HERE</item>
        <item>OPERATION MANAGER</item>
        <item>GENERAL TRADE MANAGER</item>
    </string-array>

    <string-array name="rank2">
        <item>SELECT HERE</item>
        <item>GENERAL TRADE MANAGER</item>
        <item>DMCS</item>
        <item>SALES REPRESENTATIVE</item>
        <item>VAN SALESMAN</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>