<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"  >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="Dashboard"
            android:icon="@drawable/ic_action_home"/>

        <item
            android:id="@+id/addentry"
            android:title="@string/string_addentry"
            android:icon="@drawable/ic_action_addentry"/>

        <item
            android:id="@+id/listentry"
            android:title="@string/string_listentry"
            android:icon="@drawable/ic_action_listentry"/>

        <item
            android:id="@+id/mcp"
            android:title="@string/string_mcp"
            android:icon="@drawable/ic_action_mcp"/>

        <item
            android:id="@+id/sales"
            android:title="@string/string_sales"
            android:icon="@drawable/ic_action_sales"/>


    </group>

    <item
        android:title="@string/string_control">
    <menu>

        <item
        android:id="@+id/settings"
        android:title="@string/string_settings"
        android:icon="@drawable/ic_action_settings"/>

        <item
            android:id="@+id/logout"
            android:title="@string/string_logout"
            android:icon="@drawable/ic_action_logout"/>

    </menu>

    </item>


</menu>